rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__number_declaration_missing_semicolon.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_err :: < Statement >\n(stringify! (number_declaration_missing_semicolon), \"5\")"
---
error: Expected ';'
  ┌─ number_declaration_missing_semicolon:1:1
  │
1 │ 5
  │ ^ Expected ';'
